<resources>
    <string name="app_name">WSYApp</string>
    <string name="login">Log in</string>
    <string name="About_us">About WSY</string>
    <string name="Term">Term and Conditions</string>
    <string name="FAQ">FAQ</string>
    <string name="Package">Package</string>
    <string name="Offer">Offer</string>
    <string name="Verification_code">Verification code</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummy">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s
        standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
        It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release
        of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s
        standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
        It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release
        of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s
        standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
        It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release
        of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s
        standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
        It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release
        of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s
        standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
        It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release
        of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s
        standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
        It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release
        of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
    </string>
    <string name="kunio_auto_derives_its_name_from_a_unique_individual_in">Kunio Auto derives its name from a unique individual in</string>
    <string name="cancel">Cancel</string>
    <string name="OK">OK</string>
    <string name="msg">You will call Customer service +971 545454545</string>
    <string name="garage">Garage</string>
    <string name="car_parts">Car Parts</string>
    <string name="car_service">Car Service</string>
    <string name="recovery">Recovery</string>
    <string name="send_verification_code">Send verification Code</string>
    <string name="verification_code_sent_to_your_mobile">Verification code sent to your mobile</string>
    <string name="_971_000000">971 000000</string>
    <string name="code">Code</string>
    <string name="confirmation">Confirmation</string>
    <string name="send_verification_code_again">Send verification code again</string>
    <string name="_04_54">04:54</string>
    <string name="log_in">Log in</string>
    <string name="offers">Offers</string>
    <string name="packages">Packages</string>
    <string name="Commig_Soon">Coming Soon!</string>
    <string name="about_wsy">About WSY</string>
    <string name="call_us">Call US</string>
    <string name="share_with_a_friend">Share with a friend</string>
    <string name="rate_wsy_in_store">rate WSY in store</string>
    <string name="faq">FAQ</string>
    <string name="term_and_conditions">Term and Conditions</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="GOOGLE_API_KEY">AIzaSyBfWJILAHUIYgaehy3PuitwAgPT7M952B8</string>
    <string name="search">Search</string>
    <string name="Counter_starts">Counter starts with 140 SR minute 0.99 SR KM 1.99 SR</string>
    <string name="tire_fix_45_sra">Tire Fix -45 SRA</string>
    <string name="order_details">Order Details</string>
    <string name="apply_promo_code">Apply Promo</string>
    <string name="confirm">Confirm</string>
    <string name="improve_accuracy">Improve Accuracy</string>
    <string name="for_accuracy">(For the accuracy of your device, stay away from the magnet and move the mobile in the form on No. 8 and God Accepts from us and you)</string>
    <string name="agree">Agree</string>
    <string name="prayer">Prayer time</string>
    <string-array name="emirates">
        <item>All City</item>
        <item>Abu Dhabi</item>
        <item>Dubai</item>
        <item>Sharjah</item>
        <item>Umm al-Quwain</item>
        <item>Ajman</item>
        <item>Ras al-Khaimah</item>
        <item>Fujairah</item>
        <item>Al Ain</item>
    </string-array>
    <string-array name="emirates_id">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>
    <string-array name="emirates_form">
        <item>Abu Dhabi</item>
        <item>Dubai</item>
        <item>Sharjah</item>
        <item>Umm al-Quwain</item>
        <item>Ajman</item>
        <item>Ras al-Khaimah</item>
        <item>Fujairah</item>
        <item>Al Ain</item>
    </string-array>
    <string-array name="emirates_id_form">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>
    <string name="dummy_services">Car wash, change breaks, Car wash, change breaks,Car wash, change breaks,Car wash, change breaks, change breaks, Car wash, change breaks,Car wash, change breaks,Car wash, change breaks</string>
    <string name="select_car">Change CAR:</string>
    <string name="car_name">Car Name:</string>
    <string name="car_model">Car Model:</string>
    <string name="car_type">Car Type:</string>
    <string name="upload_images">Upload Image</string>
    <string name="add_car">Add Car</string>
    <string name="old_number">Old Number:</string>
    <string name="new_number">New number:</string>
    <string name="confirm_number">Confirm number:</string>
    <string name="change_number">Change Number</string>
    <string name="komal_yogi">Komal Yogi</string>
    <string name="edes_gmail_com">edes@gmail.com</string>
    <string name="message">Message</string>
    <string name="message_">Message:</string>
    <string name="payment_option">Payment Option</string>
    <string name="cash">Cash</string>
    <string name="online_payment">Online Payment</string>
    <string name="address">Address:</string>
    <string name="update">Update</string>
    <string name="request_quotation">Request Quotation</string>
    <string name="select_all">Select All</string>
    <string name="xyz_garage">XYZ Garage</string>
    <string name="make_quotation_request">Make Quotation Request</string>
    <string name="abu_dhabi">Abu Dhabi</string>
    <string name="opening_hours">Opening Hours</string>
    <string name="_8_00_am_to_5_pm">8:00 AM to 5: PM</string>
    <string name="closing_hours">Working Hours</string>
    <string name="services">Services</string>
    <string name="image_gallery">Image Gallery</string>
    <string name="name">Name:</string>
    <string name="number">Number:</string>
    <string name="mail_id">Mail Id:</string>
    <string name="enter_address">Enter Address</string>
    <string name="request_to_pick_car_from_home">Request to pick car from home</string>
    <string name="submit">Submit</string>
    <string name="enter_full_name">Enter full name</string>
    <string name="enter_number">Enter Number</string>
    <string name="_971">971</string>
    <string name="pay">Pay</string>
    <string name="enter_email_id">Enter email id</string>
    <string name="bmw_car">BMW Car</string>
    <string name="model_car">Model Car</string>
    <string name="select_where_to_serve">Select where to serve</string>
    <string name="hello">Hello,</string>
    <string name="available_credit">Available Credit:</string>
    <string name="aed_55">AED: 55</string>
    <string name="amount_to_recharge">Amount to recharge</string>
    <string name="select_or_enter_amount_aed">Select or Enter amount(AED)</string>
    <string name="_25_aed">25 AED</string>
    <string name="_50_aed">50 AED</string>
    <string name="_75_aed">75 AED</string>
    <string name="_100_aed">100 AED</string>
    <string name="recharge">Recharge</string>
    <string name="khalifa_street">Khalifa street</string>
    <string name="abu_dhabi_uae">Abu Dhabi, UAE</string>
    <string name="towing">Towing</string>
    <string name="visit">Visit</string>
    <string name="my_order">My Order</string>
    <string name="status">Status</string>
    <string name="profile">Profile</string>
    <string name="my_orders">My Orders</string>
    <string name="complains">Complains</string>
    <string name="Select_Address">Select Address</string>
    <string name="settings">Settings</string>
    <string name="install">Update</string>
    <string name="app_update_msg">New updates are available, Kindly update the Application.</string>
    <string name="home">Home</string>
    <string name="select_city">Select City</string>
    <string name="add_garage">Add Garage</string>
    <string name="my_requests">My Requests</string>
    <string name="language">Language</string>
    <string name="app_version">Application Version</string>
    <string name="app_details">App Details</string>
    <string name="select_langauge_msg">Select the Application language</string>
    <string name="phone">Phone</string>
    <string name="area">Area</string>
    <string name="street">Street</string>
    <string name="city">City</string>
    <string name="building">Building Number</string>
    <string name="apartment">Apartment Number</string>
    <string name="select">SELECT</string>
</resources>