<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/cl_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/dp5"
    android:layout_marginBottom="@dimen/dp5">
    <TextView
        android:id="@+id/tv_name_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp10"
        android:fontFamily="@font/opensans_regular"
        android:gravity="center_vertical"
        android:text="@string/name"
        android:textColor="@color/textColorPrimary"
        android:textSize="@dimen/normal"/>
    <TextView
        android:id="@+id/tv_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp10"
        android:fontFamily="@font/opensans_regular"
        android:gravity="center_vertical"
        android:text="@string/Select_Address"
        android:textColor="@color/textColorPrimary"
        android:textSize="@dimen/normal"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp10"
            android:fontFamily="@font/opensans_regular"
            android:gravity="center_vertical"
            android:text="@string/phone"
            android:textColor="@color/textColorPrimary"
            android:textSize="@dimen/normal"/>
        <TextView
            android:id="@+id/tv_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp10"
            android:fontFamily="@font/opensans_regular"
            android:gravity="center_vertical"
            android:text="@string/phone"
            android:textColor="@color/textColorPrimary"
            android:textSize="@dimen/normal"/>
    </LinearLayout>
    <TextView
        android:id="@+id/tv_select_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_bg"
        android:fontFamily="@font/opensans_bold"
        android:layout_marginTop="@dimen/dp2"
        android:layout_gravity="end"
        android:gravity="center"
        android:padding="@dimen/dp10"
        android:text="@string/select"
        android:textColor="@color/whiteColor"
        android:textSize="@dimen/small"/>

</LinearLayout>