<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp20"
        android:background="@color/whiteColor"
        android:orientation="vertical"
        >

        <TextView
            android:padding="@dimen/dp5"
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/app_name"
            android:textColor="@color/colorTheme"
            android:textSize="@dimen/normal" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp1"
            android:layout_gravity="center"
            android:background="@color/textColorSecond" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:fontFamily="@font/opensans_regular"
                    android:id="@+id/tv_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/dp20"
                    android:layout_marginBottom="@dimen/dp20"
                    android:gravity="center"
                    android:text="@string/app_update_msg"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="@dimen/normal" />

            </LinearLayout>

        </ScrollView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:background="?attr/selectableItemBackground"
                android:gravity="center"
                android:paddingStart="@dimen/dp20"
                android:paddingTop="@dimen/dp10"
                android:paddingEnd="@dimen/dp20"
                android:paddingBottom="@dimen/dp10"
                android:text="@string/cancel"

                android:textColor="@color/textColorPrimary"
                android:textSize="@dimen/small" />

            <TextView
                android:id="@+id/tv_update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:background="@drawable/button_bg"
                android:fontFamily="@font/opensans_bold"
                android:gravity="center"
                android:paddingStart="@dimen/dp20"
                android:paddingTop="@dimen/dp10"
                android:paddingEnd="@dimen/dp20"
                android:paddingBottom="@dimen/dp10"
                android:text="@string/install"
                android:textColor="@color/whiteColor"
                android:textSize="@dimen/small" />
        </RelativeLayout>


    </LinearLayout>

</RelativeLayout>
