<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whiteColor"
    android:clickable="true"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:id="@+id/cl_parent"
        android:layout_height="match_parent">

        <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
            android:id="@+id/sp_emirates"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp10"
            android:layout_marginTop="@dimen/dp10"
            android:layout_marginEnd="@dimen/dp10"
            android:fontFamily="@font/opensans_regular"
            android:hint="@string/select_city"
            android:textSize="@dimen/normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:met_floatingLabel="normal"
            app:met_floatingLabelTextColor="@color/textColorPrimary"
            app:met_textColorHint="@color/textColorPrimary" />

        <androidx.recyclerview.widget.RecyclerView

            android:overScrollMode="never"
            android:background="@color/whiteColor"
            android:id="@+id/rv_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chk_select_all" />

        <TextView

            android:id="@+id/tv_req_quotion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:ellipsize="end"
            android:fontFamily="@font/opensans_regular"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:paddingStart="@dimen/dp10"
            android:paddingTop="@dimen/dp10"
            android:paddingEnd="@dimen/dp10"
            android:paddingBottom="@dimen/dp10"
            android:singleLine="true"
            android:text="@string/request_quotation"
            android:textColor="@color/colorTheme"
            android:textSize="@dimen/normal"
            app:layout_constraintBottom_toBottomOf="@+id/chk_select_all"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/chk_select_all" />

        <CheckBox
            android:id="@+id/chk_select_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp10"
            android:layout_marginEnd="@dimen/dp10"
            android:fontFamily="@font/opensans_regular"
            android:padding="@dimen/dp5"
            android:text="@string/select_all"
            android:textSize="@dimen/small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sp_emirates" />

        <TextView
            android:id="@+id/tv_no_data_found"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/opensans_regular"
            android:text="@string/Commig_Soon"
            android:textColor="@color/colorTheme"
            android:textSize="@dimen/big"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>